doc/logfile.txt
Project documentation
<---- javadoc command: ---->
javadoc
-sourcepath
/Users/anthonysiggia/Documents/GitHub/Cowpocalypse
-source
17
-classpath
/Applications/Greenfoot.app/Contents/Java/greenfoot.jar:/Applications/Greenfoot.app/Contents/Java/bluejcore.jar:/Applications/Greenfoot.app/Contents/Java/javafx-base-20.0.1.jar:/Applications/Greenfoot.app/Contents/Java/javafx-graphics-20.0.1.jar:/Applications/Greenfoot.app/Contents/Java/javafx-controls-20.0.1.jar:/Applications/Greenfoot.app/Contents/Java/javafx-fxml-20.0.1-mac.jar:/Applications/Greenfoot.app/Contents/Java/javafx-controls-20.0.1-mac.jar:/Applications/Greenfoot.app/Contents/Java/javafx-web-20.0.1-mac.jar:/Applications/Greenfoot.app/Contents/Java/javafx-media-20.0.1.jar:/Applications/Greenfoot.app/Contents/Java/javafx-base-20.0.1-mac.jar:/Applications/Greenfoot.app/Contents/Java/javafx-media-20.0.1-mac.jar:/Applications/Greenfoot.app/Contents/Java/javafx-graphics-20.0.1-mac.jar:/Applications/Greenfoot.app/Contents/Java/javafx-swing-20.0.1-mac.jar:/Applications/Greenfoot.app/Contents/Java/junit-4.12.jar:/Applications/Greenfoot.app/Contents/Java/junit-jupiter-params-5.5.2.jar:/Applications/Greenfoot.app/Contents/Java/junit-jupiter-api-5.5.2.jar:/Applications/Greenfoot.app/Contents/Java/junit-jupiter-engine-5.5.2.jar:/Applications/Greenfoot.app/Contents/Java/junit-platform-suite-api-1.5.2.jar:/Applications/Greenfoot.app/Contents/Java/junit-vintage-engine-5.5.2.jar:/Applications/Greenfoot.app/Contents/Java/junit-jupiter-5.5.2.jar:/Applications/Greenfoot.app/Contents/Java/junit-platform-engine-1.5.2.jar:/Applications/Greenfoot.app/Contents/Java/junit-platform-launcher-1.5.2.jar:/Applications/Greenfoot.app/Contents/Java/junit-platform-commons-1.5.2.jar:/Applications/Greenfoot.app/Contents/Java/hamcrest-core-1.3.jar:/Applications/Greenfoot.app/Contents/Java/opentest4j-1.2.0.jar:/Applications/Greenfoot.app/Contents/Java/bluej.jar:/Applications/Greenfoot.app/Contents/Java/classgraph-4.8.90.jar:/Applications/Greenfoot.app/Contents/Java/diffutils-1.2.1.jar:/Applications/Greenfoot.app/Contents/Java/commons-logging-1.2.jar:/Applications/Greenfoot.app/Contents/Java/commons-logging-1.1.3.jar:/Applications/Greenfoot.app/Contents/Java/jl1.0.1.jar:/Applications/Greenfoot.app/Contents/Java/opencsv-2.3.jar:/Applications/Greenfoot.app/Contents/Java/opencsv-2.4.jar:/Applications/Greenfoot.app/Contents/Java/xom-1.3.7.jar:/Applications/Greenfoot.app/Contents/Java/lang-stride.jar:/Applications/Greenfoot.app/Contents/Java/nsmenufx-2.1.8.jar:/Applications/Greenfoot.app/Contents/Java/wellbehavedfx-0.3.3.jar:/Applications/Greenfoot.app/Contents/Java/guava-17.0.jar:/Applications/Greenfoot.app/Contents/Java/httpclient-4.3.6.jar:/Applications/Greenfoot.app/Contents/Java/httpcore-4.3.3.jar:/Applications/Greenfoot.app/Contents/Java/httpmime-4.1.1.jar:/Users/anthonysiggia/Documents/GitHub/Cowpocalypse
-d
/Users/anthonysiggia/Documents/GitHub/Cowpocalypse/doc
-encoding
UTF-8
-charset
UTF-8
-doctitle
Cowpocalypse
-windowtitle
Cowpocalypse
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-link
https://docs.oracle.com/en/java/javase/17/docs/api/
cowpocolypse1
/Users/anthonysiggia/Documents/GitHub/Cowpocalypse/alien1.java
/Users/anthonysiggia/Documents/GitHub/Cowpocalypse/GHGJ.java
/Users/anthonysiggia/Documents/GitHub/Cowpocalypse/spaceShip.java
/Users/anthonysiggia/Documents/GitHub/Cowpocalypse/bulllet.java
/Users/anthonysiggia/Documents/GitHub/Cowpocalypse/doorLevel2.java
/Users/anthonysiggia/Documents/GitHub/Cowpocalypse/cowboylevel3.java
/Users/anthonysiggia/Documents/GitHub/Cowpocalypse/cow1.java
/Users/anthonysiggia/Documents/GitHub/Cowpocalypse/j.java
/Users/anthonysiggia/Documents/GitHub/Cowpocalypse/cow.java
/Users/anthonysiggia/Documents/GitHub/Cowpocalypse/cowboyLevel2.java
/Users/anthonysiggia/Documents/GitHub/Cowpocalypse/gameOverWonWorld.java
/Users/anthonysiggia/Documents/GitHub/Cowpocalypse/alienCowEater.java
/Users/anthonysiggia/Documents/GitHub/Cowpocalypse/Vector2D.java
/Users/anthonysiggia/Documents/GitHub/Cowpocalypse/barn.java
/Users/anthonysiggia/Documents/GitHub/Cowpocalypse/Point2D.java
/Users/anthonysiggia/Documents/GitHub/Cowpocalypse/xcmc.java
/Users/anthonysiggia/Documents/GitHub/Cowpocalypse/insaneLevelCowboy.java
/Users/anthonysiggia/Documents/GitHub/Cowpocalypse/gameLossOverWorld.java
/Users/anthonysiggia/Documents/GitHub/Cowpocalypse/levels.java
/Users/anthonysiggia/Documents/GitHub/Cowpocalypse/forrest1.java
<---- end of javadoc command ---->
Loading source file /Users/anthonysiggia/Documents/GitHub/Cowpocalypse/alien1.java...
Loading source file /Users/anthonysiggia/Documents/GitHub/Cowpocalypse/GHGJ.java...
Loading source file /Users/anthonysiggia/Documents/GitHub/Cowpocalypse/spaceShip.java...
Loading source file /Users/anthonysiggia/Documents/GitHub/Cowpocalypse/bulllet.java...
Loading source file /Users/anthonysiggia/Documents/GitHub/Cowpocalypse/doorLevel2.java...
Loading source file /Users/anthonysiggia/Documents/GitHub/Cowpocalypse/cowboylevel3.java...
Loading source file /Users/anthonysiggia/Documents/GitHub/Cowpocalypse/cow1.java...
Loading source file /Users/anthonysiggia/Documents/GitHub/Cowpocalypse/j.java...
Loading source file /Users/anthonysiggia/Documents/GitHub/Cowpocalypse/cow.java...
Loading source file /Users/anthonysiggia/Documents/GitHub/Cowpocalypse/cowboyLevel2.java...
Loading source file /Users/anthonysiggia/Documents/GitHub/Cowpocalypse/gameOverWonWorld.java...
Loading source file /Users/anthonysiggia/Documents/GitHub/Cowpocalypse/alienCowEater.java...
/Users/anthonysiggia/Documents/GitHub/Cowpocalypse/alienCowEater.java:16: error: ')' expected
            world.addObject(new alienCowEater();
                                               ^
Loading source file /Users/anthonysiggia/Documents/GitHub/Cowpocalypse/Vector2D.java...
Loading source file /Users/anthonysiggia/Documents/GitHub/Cowpocalypse/barn.java...
Loading source file /Users/anthonysiggia/Documents/GitHub/Cowpocalypse/Point2D.java...
Loading source file /Users/anthonysiggia/Documents/GitHub/Cowpocalypse/xcmc.java...
Loading source file /Users/anthonysiggia/Documents/GitHub/Cowpocalypse/insaneLevelCowboy.java...
Loading source file /Users/anthonysiggia/Documents/GitHub/Cowpocalypse/gameLossOverWorld.java...
Loading source file /Users/anthonysiggia/Documents/GitHub/Cowpocalypse/levels.java...
Loading source file /Users/anthonysiggia/Documents/GitHub/Cowpocalypse/forrest1.java...
1 error
